--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         }
     ],
     "require": {
-        "php": "^7.0"
+        "php": "^7.0",
+        "genial-framework/initialize": "1.*"
     },
     "autoload": {
         "psr-4": {
