--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,24 @@
 {
     "name": "genial-framework/env",
     "type": "library",
-    "description": "A wrapper for managing the framework configuration details!",
-    "homepage": "https://nenglish.me/php/genial-framework/env/",
+    "description": "Env configuration file adapter for Genial Framework.",
+    "homepage": "https://github.com/Genial-Framework/Env",
     "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Nicholas English",
             "email": "nenglish0820@outlook.com",
-            "homepage": "https://nenglish.me/",
+            "homepage": "https://github.com/Nenglish7",
             "role": "Developer"
+        },
+        {
+            "name": "Genial Contributors",
+            "homepage": "https://github.com/orgs/Genial-Framework/people",
+            "role": "Contribute"
         }
     ],
     "require": {
-        "php": "^7.0",
-        "genial-framework/initialize": "1.*"
+        "php": "^7.0"
     },
     "autoload": {
         "psr-4": {
