--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: php
 php:
     - '7.0'
     - '7.1'
-    - '7.2'
 os:
     - linux
     - windows
@@ -26,7 +25,7 @@ branches:
 notifications:
     email:
         on_success: never
-        on_failure: always
+        on_failure: never
 cache:
     directories:
         - vendor
