--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         }
     ],
     "require": {
-        "php": "^7.0"
+        "php": "^7.0",
+        "ext-mbstring": "*"
     },
     "autoload": {
         "psr-4": {
