--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
         }
     ],
     "require": {
-        "php": "^7.0",
-        "ext-mbstring": "*"
+        "php": "^7.0"
     },
     "autoload": {
         "psr-4": {
