--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         }
     ],
     "require": {
-        "php": "^7.0"
+        "php": "^7.0",
+        "genial-framework/logger": "1.*",
+        "genial-framework/debug": "1.*"
     },
     "autoload": {
         "psr-4": {
