--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,7 @@
         }
     ],
     "require": {
-        "php": "^7.0",
-        "genial-framework/logger": "1.*",
-        "genial-framework/debug": "1.*"
+        "php": "^7.0"
     },
     "autoload": {
         "psr-4": {
