--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "enviroment",
         "configuration"
     ],
-    "description": "Env configuration file adapter for Genial Framework.",
+    "description": "Environment configuration file adapter for Genial Framework.",
     "homepage": "https://github.com/Genial-Framework/Env",
     "license": "BSD-3-Clause",
     "authors": [
