--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,10 @@ composer.phar
 /tests/
 README.md
 LICENSE.md
+PULL_REQUEST_TEMPLATE.md
+ISSUE_TEMPLATE.md
 CODE_OF_CONDUCT.md
 CONTRIBUTING.md
 .coveralls.yml
 phpunit.xml
+commentBlock
