--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ php:
     - '7.2'
 os:
     - windows
+    - linux
 matrix:
     fast_finish: true
+sudo: true
 install:
     - travis_retry composer install --no-interaction
     - wget -c -nc --retry-connrefused --tries=0 https://github.com/satooshi/php-coveralls/releases/download/v1.0.1/coveralls.phar
