--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ os:
     - linux
 matrix:
     fast_finish: true
-sudo: true
+sudo: false
 install:
     - travis_retry composer install --no-interaction
     - wget -c -nc --retry-connrefused --tries=0 https://github.com/satooshi/php-coveralls/releases/download/v1.0.1/coveralls.phar
