--- a/.env.ini.example
+++ b/.env.ini.example
@@ -1,1 +1,12 @@
+[application]
+APP_SECRET_KEY = null
+APP_NAME       = Genial
+DEBUG          = false
+LOG            = true
 
+[cookie]
+PREFIX    = [GENIAL]%
+PATH      = /
+DOMAIN    = null
+SECURE    = false
+HTTP_ONLY = true
