--- a/.env.ini.example
+++ b/.env.ini.example
@@ -1,5 +1,4 @@
 [application]
-APP_SECRET_KEY = null
 APP_NAME       = Genial
 DEBUG          = false
 LOG            = true
@@ -7,6 +6,6 @@ LOG            = true
 [cookie]
 PREFIX    = [GENIAL]%
 PATH      = /
-DOMAIN    = null
+DOMAIN    = localhost
 SECURE    = false
 HTTP_ONLY = true
