--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,18 @@
 {
-    "name": "genial-framework/env",
+    "name": "syzerphp-framework/environment",
     "type": "library",
     "keywords": [
         "php7",
         "library",
         "php-framework",
-        "genial-framework",
+        "syzerphp-framework",
         "enviroment",
-        "configuration"
+        "configuration",
+        "php-component",
+        "component"
     ],
-    "description": "Environment configuration file adapter for Genial Framework.",
-    "homepage": "https://github.com/Genial-Framework/Env",
+    "description": "Environment component for SyzerPHP Framework.",
+    "homepage": "https://github.com/SyzerPHP/Environment",
     "license": "BSD-3-Clause",
     "authors": [
         {
@@ -20,8 +22,8 @@
             "role": "Developer"
         },
         {
-            "name": "Genial Contributors",
-            "homepage": "https://github.com/orgs/Genial-Framework/people",
+            "name": "SyzerPHP Contributors",
+            "homepage": "https://github.com/orgs/SyzerPHP/people",
             "role": "Contribute"
         }
     ],
@@ -30,9 +32,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Genial\\Env\\": "src/"
-        },
-        "files": ["main.bootstrap.php"]
+            "SyzerPHP\\Environment\\": ""
+        }
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5"
