--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,7 @@
 {
     "name": "syzerphp-framework/environment",
     "type": "library",
-    "keywords": [
-        "php7",
-        "library",
-        "php-framework",
-        "syzerphp-framework",
-        "enviroment",
-        "configuration",
-        "php-component",
-        "component"
-    ],
+    "keywords": ["php7", "library", "php-framework", "syzerphp-framework", "enviroment", "configuration", "php-component", "component"],
     "description": "Environment component for SyzerPHP Framework.",
     "homepage": "https://github.com/SyzerPHP/Environment",
     "license": "BSD-3-Clause",
@@ -31,9 +22,10 @@
         "php": "^7.0"
     },
     "autoload": {
-        "psr-4": {
-            "SyzerPHP\\Environment\\": ""
-        }
+        "psr-4": { "SyzerPHP\\Environment\\": ""}
+        "exclude-from-classmap": [
+            "/tests/"
+        ]
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5"
