--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "php": "^7.0"
     },
     "autoload": {
-        "psr-4": { "SyzerPHP\\Environment\\": ""}
+        "psr-4": { "SyzerPHP\\Environment\\": ""},
         "exclude-from-classmap": [
             "/tests/"
         ]
